# NetMath

./: .gitignore  BuildUtils.cmake  CMakeLists.txt  README.MD  builder.py
docs/: CMakeLists.txt  README.md  build.sh
docs/1_SimpleCalc/: README.md
docs/3_DataStructures1/include/: hash_table.h  linked_list.h  queue_p.h  stack.h
docs/3_DataStructures1/tests/: hash_table_tests.c  linked_list_tests.c  queue_p_tests.c  queue_tests.c  stack_tests.c
docs/Tests/: ThreadCalcTests.py
include/: arg_parser.h  calculation.h  header_parser.h  server.h  server_backend.h  thread_pool.h  utils.h
src/calculation/: CMakeLists.txt  calculation.c
src/client/: client.py
src/header_parser/: CMakeLists.txt  header_parser.c
src/server/: CMakeLists.txt  arg_parser.c  server.c  server_backend.c
src/thread_pool/: CMakeLists.txt  thread_pool.c
src/utils/: CMakeLists.txt  utils.c
tests/: CMakeLists.txt  EquGrader.py  gtest_calculation.cpp  gtest_header_parser.cpp  gtest_server.cpp  gtest_thread_pool.cpp
tests/equ_files/: 145b1f7102c39f78.equ  5f8f7f3d6cf6b0b8.equ  90e76c165c4e1c66.equ
tests/solved/: 582ea02dfbab9b0e.equ  5ea97df9efa5655a.equ  723a5d6d5185c747.equ  ce9ebdb894bd395a.equ
tests/unsolved/: 71e591798ed043e9.equ  af70ea1af0de1c31.equ  db9022e160915536.equ  de49b8dd30888a7e.equ  de6f2258fde9caa4.equ  e484b62a7f9bcf1d.equ  fc4f9187b53f3e71.equ  fe1c4c132fd0d02a.equ  valid_3a78786203e77c0b.equ
